main page images

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,39 +25,44 @@
   
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/bullisland.jpg" alt="Bull Island"/>
+        <figcaption>Bull Island</figcaption>
+      </figure>
   </div>  
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/edistosunset.jpg" alt="Edisto Island"/>
+        <figcaption>Edisto Island</figcaption>
+      </figure>
   </div>  
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/iopbeach.jpg" alt="IOP Beach"/>
+        <figcaption>Isle of Palms</figcaption>
+      </figure>
   </div>  
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/sand_sea.jpg" alt="Sand and Sea"/>
+        <figcaption>Sand and Sea</figcaption>
   </div>  
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/boneyardbeachlynch.jpg" alt="Boneyard Beach"/>
+        <figcaption>Boneyard Beach</figcaption>
+      </figure>
   </div>  
 
   <div class="figure">
-      <div class="figcaption">
-        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
-      </div>
+      <figure>
+        <img src="images/waties-island.jpg" alt="Waties Island"/>
+        <figcaption>Waites Island</figcaption>
+      </figure>
   </div>  
   
 
