--- a/app/views/main.html
+++ b/app/views/main.html
@@ -64,6 +64,21 @@
         <figcaption>Waites Island</figcaption>
       </figure>
   </div>  
+
+  <br>
+
+  </br>
+
+  <br>
+
+</br>
+
+  <p> A low-lying chain of sandy sea islands stretch from Florida north along the coastlines of Georgia and South Carolina.</p>
+
+  <p>These beautiful islands are alive with wildlife of all description. Considered some of the best fishing venues in the southeastern United States, many of these isolated palm covered islands have stunning white sand beaches.</p>
+
+  <p>The most visited, and most famous island in the chain is Hilton Head. It covers an area of 40 sq. miles, and includes miles of broad beaches, marinas, over two dozen championship golf courses, and more tennis courts than any other resort of its size. It's covered with resort communities, as well as a wide-variety of lodging venues. -Courtesy World Atlas
+  </p>
   
 
 
