plantation links changed to h2 on edisto

--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -49,10 +49,10 @@
       <section class="edisto-plantations">
         <h2>Edisto Plantations</h2>
           <ul>
-            <li><a href="http://en.wikipedia.org/wiki/Seaside_Plantation_House">Seaside Plantation House</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Peter%27s_Point_Plantation">Peter's Point Plantation</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Windsor_Plantation">Windsor Plantation</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Crawford%27s_Plantation_House">Crawford's Plantation House</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Seaside_Plantation_House"><h2>Seaside Plantation House</h2></a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Peter%27s_Point_Plantation"><h2>Peter's Point Plantation</h2></a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Windsor_Plantation"><h2>Windsor Plantation</h2></a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Crawford%27s_Plantation_House"><h2>Crawford's Plantation House</h2></a></li>
         </section>
         <section class="edistobeach-info">
           <h2>Edisto Beach</h2>
