still workin on it but all is not lost

--- a/app/views/practice.html
+++ b/app/views/practice.html
@@ -7,25 +7,39 @@
   <title>ACTIVITIES</title>
 </head>
 
-  <div class="header">
-  <ul class="nav nav-pills pull-right">
+  <div class="content-left image">
+  <!-- <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/edisto">Edisto</a></li>
     <li><a ng-href="#/practice">Practice</a></li>
-  </ul>
+  </ul> -->
   </div>
-<body>
+
+  <div class="content-right">
+    <h1>Discover the Barrier Islands</h1>
+    <h2>The Islands</h2>
+  <div class="list-group">
+    <a href="#" class="list-group-item" data-hover-image="images/steering_bg.jpg">
+      <div class="titles">
+        <h3 class="title-link">South Carolina Barrier Islands</h3>
+          <h4 class="title-link">Visit One of The Islands</h4>
+      </div>
+    </a>
+    </div>
+
+  </div>
+      <!-- <body>
 <div class="wrapper">
   <header>
     <h1>South Carolina Barrier Islands</h1>
   </header> 
-  
+   -->
   
 
-  <div class="figure">
+  <!-- <div class="figure">
       <figure>
         <img src="images/bullisland.jpg" alt="Bull Island"/>
         <figcaption>Bull Island</figcaption>
@@ -81,15 +95,16 @@
   <p>The most visited, and most famous island in the chain is Hilton Head. It covers an area of 40 sq. miles, and includes miles of broad beaches, marinas, over two dozen championship golf courses, and more tennis courts than any other resort of its size. It's covered with resort communities, as well as a wide-variety of lodging venues. -Courtesy World Atlas
   </p>
   
-
+ -->
 
 
   
   <!-- </div> .wrapper -->
 
 
-</body>
+<!-- </body> -->
+
+</html>
 <footer>
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </footer>
-</html>
