--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,25 +49,6 @@ footer {
     margin: 30px 0;
 }
 
-
-// .btn {
-//     text-align: center;
-//     text-shadow: 5px;
-//     font-size: 21px;
-//     padding: 14px 24px;
-//     color: #39257c;
-//     box-shadow: 5px 5px 5px 5px, #777777;
-// }
-
-/* Supporting marketing content */
-// .marketing {
-//     margin: 40px 0;
-// }
-
-// .marketing p + h4 {
-//     margin-top: 28px;
-// }
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
@@ -86,10 +67,7 @@ footer {
     .header {
         margin-bottom: 50px;
     }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    // .jumbotron {
-    //     border-bottom: 0;
-    // }
+    
 }
     
 
@@ -110,17 +88,15 @@ footer {
 
     body {
         color: #666666;
-        background-color: #f9f8f6;
-        background-image: url("images/boneyardbeachlynch.jpg");
+        background: url("../images/steering_bg.jpg") no-repeat center center fixed;
+        background-size: cover;
         background-position:  center;
         font-family: helvetica, Georgia, Times, sans-serif;
         line-height: 1.4em;
         margin: 0px;
         width: 750;
     }
-    .btn-default{
-        position: center;
-        }
+    
     .nav
     .footer
     {
@@ -129,14 +105,12 @@ footer {
         background-color: #aeaca8;
         height: 30px;
         width: 750px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        text-shadow: 3px 3px 3px gray;
+        font-family: 'Raleway', sans-serif;
     }
-//     footer {
-//     padding-top: 19px;
-//     color: #777;
-//     border-top: 1px solid #e5e5e5;
-//     text-shadow: 3px 3px 3px gray;
-//     font-family: helvetica;
-// }
+
     .nav ul {
         margin: 0px;
         padding: 5px 0px 5px 30px;
@@ -168,9 +142,7 @@ footer {
         font-size: 20px;
 
     }
-    .hgroup {
-        margin-top: 40px;
-    }
+    
     .figure {
         float: right;
         width: 340px;
@@ -179,11 +151,11 @@ footer {
         margin: 20px;
         // border: 5px solid #eeeeee;
     }
-    .figcaption {
-       font-size: 100%;
+    figcaption {
+       font-size: 2rem;
        font-family: helvetica;
        text-align: bottom;
-       text-color: black;
+       color: black;
     }
     aside {
         width: 230px;
@@ -207,7 +179,7 @@ footer {
     h2
     h3 {
         font-weight: normal;
-        font-family: helvetica;
+        font-family: 'Raleway', sans-serif;;
     }
     h2 {
         font-weight: bold;
@@ -257,11 +229,40 @@ footer {
 
     }
 
+    .image {
+        background-image: url("../images/steering_bg.jpg");
+    }
 
 
+// Home Page Styling - DO I NEED TO CREATE ITS OWN CSS SHEET FOR IT?
 
-    body {
-        background: url("../images/steering_bg.jpg") no-repeat center center fixed;
+    .content-left {
+        position: fixed;
+        width: 65%;
         background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        height: 100%;
+        overflow: hidden;
+    }
 
+    .content-right {
+        float: left;
+        margin-left: 65%;
+        width: 35%;
+        background: #182f44;
+    }
+
+    .content-left .hover-background {
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        position: absolute;
+
+    }
+
+    .content-left .hover-background.active {
+        opacity: 1;
     }
