--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -10,6 +10,7 @@
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#">Edisto</a></li>
+    <li><a ng-href="#/practice">Practice</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
