--- a/app/views/postcards.html
+++ b/app/views/postcards.html
@@ -2,27 +2,34 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Send a Postcard</title>
+	<title>Postcard</title>
 	<div class="header">
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#/main">Home</a></li>
-    <li><a ng-href="#/history">History</a></li>
+    <!-- <li><a ng-href="#/history">History</a></li> -->
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#">Postcards</a></li>
-    <li><a ng-href="#/edisto">Edisto</a></li>
+    <!-- <li><a ng-href="#/edisto">Edisto</a></li> -->
+    <li><a ng-href="#/practice">Practice</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
 </head>
 <body>
-  <hgroup>
   
-    <h2>JACK'S FAVORITE ISLANDS</h2>
-        
-  </hgroup>
-   <article>   
-      <p>The Sea Islands are a chain of tidal and barrier islands on the Southeastern Atlantic Ocean coast of the United States. Numbering over 100, they are located between the mouths of the Santee and St. Johns Rivers along the coast of the US states of South Carolina, Georgia, and Florida.</p> 
-    </article>
+  <h2>Send a Virtual Postcard!</h2><form>
+    To:<br>
+    <input ng-model="name" type="text"/></br>
+    Message:<br>
+    <textarea ng-model="message"></textarea>
+    <input type="submit" value="send message"/>
+  </form>
+
+  <div class="postcard">
+    <div>{{name}}</div>
+    <p>{{message}}</p>
+  </div>
+  
 <section class="islands">
     <br>
 
