--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -5,9 +5,9 @@
   <title>Edisto</title>
   <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#/main">Home</a></li>
+    <li class=""><a ng-href="#/main">Experience</a></li>
     <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#">Edisto</a></li>
     <li><a ng-href="#/practice">Practice</a></li>
