--- a/app/views/history.html
+++ b/app/views/history.html
@@ -5,12 +5,11 @@
 	<title>SC Barrier Islands History Page</title>
   <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#/main">Home</a></li>
+    <li class=""><a ng-href="#/main">Experience</a></li>
     <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/edisto">Edisto</a></li>
-    <li><a ng-href="#/practice">Practice</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
