--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -5,9 +5,9 @@
 	<title>SC BARRIER ISLANDS PAGE</title>
 	<div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#/main">Home</a></li>
+    <li class=""><a ng-href="#/main">Experience</a></li>
     <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/edisto">Edisto</a></li>
   </ul>
