--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,16 +5,17 @@
   <title>SC BARRIER ISLANDS PAGE</title>
   <meta charset="UTF-8">
   <title>ACTIVITIES</title>
+  
 </head>
 
   <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#">Home</a></li>
+    <li class=""><a ng-href="#">Experience</a></li>
     <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/edisto">Edisto</a></li>
-    <li><a ng-href="#/practice">Practice</a></li>
+  
   </ul>
   </div>
 <body>
@@ -35,7 +36,7 @@
   <div class="figure">
       <figure>
         <img src="images/edistosunset.jpg" alt="Edisto Island"/>
-        <figcaption>Edisto Island</figcaption>
+        <figcaption><a ng-href="#/edisto"></a>Edisto Island</figcaption>
       </figure>
   </div>  
 
