--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
   <title>SC BARRIER ISLANDS PAGE</title>
   <meta charset="UTF-8">
   <title>ACTIVITIES</title>
-  
+
 </head>
 
   <div class="header">
@@ -26,47 +26,47 @@
   
   
 
-  <div class="figure">
+  <div class="container">
       <figure>
         <img src="images/bullisland.jpg" alt="Bull Island"/>
         <figcaption>Bull Island</figcaption>
       </figure>
-  </div>  
+  <!-- </div>   -->
 
-  <div class="figure">
+  <!-- <div class="figure"> -->
       <figure>
         <img src="images/edistosunset.jpg" alt="Edisto Island"/>
         <figcaption><a ng-href="#/edisto"></a>Edisto Island</figcaption>
       </figure>
-  </div>  
+  <!-- </div>   -->
 
-  <div class="figure">
+  <!-- <div class="figure"> -->
       <figure>
         <img src="images/iopbeach.jpg" alt="IOP Beach"/>
         <figcaption>Isle of Palms</figcaption>
       </figure>
-  </div>  
+  <!-- </div>   -->
 
-  <div class="figure">
+  <!-- <div class="figure"> -->
       <figure>
         <img src="images/sand_sea.jpg" alt="Sand and Sea"/>
         <figcaption>Sand and Sea</figcaption>
-  </div>  
+  <!-- </div>   -->
 
-  <div class="figure">
+  <!-- <div class="figure"> -->
       <figure>
         <img src="images/boneyardbeachlynch.jpg" alt="Boneyard Beach"/>
         <figcaption>Boneyard Beach</figcaption>
       </figure>
-  </div>  
+  <!-- </div>   -->
 
-  <div class="figure">
+  <!-- <div class="figure"> -->
       <figure>
         <img src="images/waties-island.jpg" alt="Waties Island"/>
         <figcaption>Waites Island</figcaption>
       </figure>
-  </div>  
-
+  <!-- </div>   -->
+ </div>
   <br>
 
   </br>
@@ -74,13 +74,19 @@
   <br>
 
 </br>
-
+<div class="text-box">
   <p> A low-lying chain of sandy sea islands stretch from Florida north along the coastlines of Georgia and South Carolina.</p>
 
   <p>These beautiful islands are alive with wildlife of all description. Considered some of the best fishing venues in the southeastern United States, many of these isolated palm covered islands have stunning white sand beaches.</p>
 
-  <p>The most visited, and most famous island in the chain is Hilton Head. It covers an area of 40 sq. miles, and includes miles of broad beaches, marinas, over two dozen championship golf courses, and more tennis courts than any other resort of its size. It's covered with resort communities, as well as a wide-variety of lodging venues. -Courtesy World Atlas
-  </p>
+</div>
+
+<p><a class="btn btn-lg btn-default" ng-href="#">Begin Your Barrier Experience</a></p>
+
+
+<!-- USE THIS INFORMATION FOR THE HILTON HEAD DATA TO APPEAR WHEN TRAVELLERS CHOOSE TO EXPLORE HILTON HEAD -->
+  <!-- <p>The most visited, and most famous island in the chain is Hilton Head. It covers an area of 40 sq. miles, and includes miles of broad beaches, marinas, over two dozen championship golf courses, and more tennis courts than any other resort of its size. It's covered with resort communities, as well as a wide-variety of lodging venues. -Courtesy World Atlas
+  </p> -->
   
 
 
