now maps not working but font is changed scbarrierpage has clickable links THE WORKING MAP AND LINKS ARE IN THE MAPSWORKINGJS

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -74,14 +74,19 @@
   <br>
 
 </br>
-<div class="text-box">
-  <p> A low-lying chain of sandy sea islands stretch from Florida north along the coastlines of Georgia and South Carolina.</p>
 
-  <p>These beautiful islands are alive with wildlife of all description. Considered some of the best fishing venues in the southeastern United States, many of these isolated palm covered islands have stunning white sand beaches.</p>
+<div class="container">
+<div class="text-box">
+  <p> A low-lying chain of sandy sea islands stretch from <br> 
+
+  Florida north along the coastlines of Georgia and South Carolina.</br></p>
+
+  <p>These beautiful islands are alive with wildlife of all description.  <br> 
+  Considered some of the best fishing venues in the southeastern United States, </br>  many of these isolated palm covered islands have stunning white sand beaches.</p>
 
 </div>
-
-<p><a class="btn btn-lg btn-default" ng-href="#">Begin Your Barrier Experience</a></p>
+</div>
+<h4><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">Begin Your Barrier Experience</a></h4>
 
 
 <!-- USE THIS INFORMATION FOR THE HILTON HEAD DATA TO APPEAR WHEN TRAVELLERS CHOOSE TO EXPLORE HILTON HEAD -->
