--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,13 +2,22 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
-.angular-google-map-container {
-    height: 400px;
-    width: 1000px;
-    border: 10px solid gray;
+// .angular-google-map-container {
+//     // height: 400px;
+//     // width: 1000px;
+//     // border: 10px solid gray;
+
+// }
+
+#map {
+    height:420px;
+    width:600px;
 }
-
-
+.infoWindowContent {
+    font-size:  14px !important;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .marketing {
     padding-left: 0px;
@@ -28,7 +37,7 @@ header {
     height: 50px;
     width: 1025px;
     color: white;
-    font-family: 'Tangerine', helvetica;
+    font-family: 'Raleway', helvetica;
     font-style: oblique;
     font-weight: bold;
     font-size: 4rem;
@@ -42,7 +51,7 @@ footer {
     border-top: 1px solid #e5e5e5;
     text-shadow: 3px 3px 3px gray;
     font-size: 3rem;
-    font-family: 'Tangerine', helvetica;
+    font-family: 'Raleway', helvetica;
 }
 
 .container {
@@ -91,7 +100,7 @@ footer {
         background: url("../images/steering_bg.jpg") no-repeat center center fixed;
         background-size: cover;
         background-position:  center;
-        font-family: 'Tangerine', helvetica, Georgia, Times, sans-serif;
+        font-family: 'Raleway', helvetica, Georgia, Times, sans-serif;
         line-height: 1.4em;
         margin: 0px;
         width: 750;
@@ -108,7 +117,7 @@ footer {
         padding-top: 20px;
         padding-bottom: 20px;
         text-shadow: 3px 3px 3px gray;
-        font-family: 'Tangerine', sans-serif;
+        font-family: 'Raleway', sans-serif;
     }
 
     // .nav ul {
@@ -126,7 +135,7 @@ footer {
         // VERY IMPORTANT - THIS IS PERFECT FONT SIZE FOR NAV AND HEADER
         // ANYTHING ELSE MUST BE LOWER THAN 40PX
         font-size: 40px;
-        font-family: 'Tangerine', helvetica;
+        font-family: 'Raleway', helvetica;
         font-weight: bold;
     }
     .nav li a:hover, 
@@ -142,7 +151,7 @@ footer {
         clear: both;
         overflow: auto;
         width: 100%;
-        font-family: 'Tangerine', helvetica;
+        font-family: 'Raleway', helvetica;
         font-size: 20px;
 
     }
@@ -161,7 +170,7 @@ footer {
     }
     figcaption {
        font-size: 4rem;
-       font-family: 'Tangerine', helvetica;
+       font-family: 'Raleway', helvetica;
        text-align: bottom;
        color: black;
        font-weight: bold;
@@ -179,8 +188,9 @@ footer {
     h3 
         {
         font-weight: normal;
-        font-family: 'Tangerine', helvetica, sans-serif;
+        font-family: 'Raleway', helvetica, sans-serif;
         font-style: normal;
+        font-size: 3rem;
         font-stretch: extended;
         color: black;
         text-shadow: 3px 3px 3px gray;
@@ -188,10 +198,22 @@ footer {
  
     }
 
+
+    h4 {
+        font-weight: normal;
+        font-family: 'Raleway', helvetica, sans-serif;
+        font-style: normal;
+        font-stretch: extended;
+        color: black;
+        text-shadow: 3px 3px 3px gray;
+        margin: 1px 0px 5px 0px;
+        text-align: center;
+        font-size: 1.5rem;
+    }
     p {
         font-weight: bold;
-        font-size: 4rem;
-        font-family: 'Tangerine', helvetica;
+        font-size: 2.5rem;
+        font-family: 'Raleway', helvetica;
         color: black;
         padding: 10px;
         text-align: center;
